--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "babel-plugin-transform-es2015-block-scoping": "6.15.0",
     "react": "15.4.1",
     "react-native": "0.39.0",
-    "react-native-maps": "^0.12.2"
+    "react-native-maps": "^0.12.2",
+    "react-native-material-design": "^0.3.7"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
